# acap-native-sdk-examples

axoverlay/: Dockerfile  systemlog.txt
axoverlay/app/: Makefile  Marker.cpp  Marker.h  axoverlay.c  manifest.json
axoverlay/app/flood/: CMakeLists.txt  Flood.cpp  Flood.h  FloodDepth.h  Marker.cpp
axoverlay/flood/: Flood.h
object-detection-cpp/: build.sh
object-detection-cpp/app/: Makefile
object-detection/app/: object_detection.c
snow-depth/: Dockerfile  build.sh  systemlog_M1135.txt  systemlog_Q1715.txt
snow-depth/app/: ImageProvider.cpp  ImageProvider.hpp  Labels.cpp  Labels.h  Larod.cpp  Larod.hpp  Makefile  Map.cpp  Map.hpp  YOLOX.cpp  YOLOX.hpp  example.cpp  imgprovider.cpp  imgprovider.h  manifest.json
snow-depth/app/SnowMeasurement/: CMakeLists.txt  MovingAvg.h  RotateAndCrop.cpp  RotateAndCrop.h  SnowDepth.cpp  SnowDepth.h  SnowMeasurement.cpp  SnowMeasurement.h  iJSON.h
snow-depth/app/config/: AXIS_Q6215-LE.xml
using-opencv/: Dockerfile
using-opencv/app/: Makefile  example.cpp  manifest.json
using-opencv/app/SnowMeasurement/: CMakeLists.txt  MovingAvg.cpp  SnowMeasurement.cpp
using-opencv/aruco/: CMakeLists.txt
vdo-larod/: build.sh  systemlog.txt
vdo-larod-cpp/: Dockerfile
vdo-larod-cpp/app/: Makefile  vdo_larod.c  vdo_larod.cpp
vdo-larod/app/: Makefile  vdo_larod.c
yolox/: Dockerfile  build.sh
yolox/app/: ImageProvider.cpp  ImageProvider.hpp  Makefile  manifest.json.cpu  manifest.json.edgetpu  yolox.c
